# simple-restaurant-api

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: lint.yml  test.yml
api-adapter/: Cargo.toml
api-adapter/src/: lib.rs  repository_impl.rs
api-adapter/src/model/: item.rs
api-adapter/src/persistence/: mysql.rs
api-adapter/src/repository/: item_repository_impl.rs  mod.rs
api-core/: Cargo.toml
api-core/src/: error.rs  lib.rs  repository.rs
api-core/src/domain/: item.rs
api-core/src/repository/: item_repository.rs
api-driver/: Cargo.toml
api-driver/src/: lib.rs  main.rs  modules.rs  routes.rs
api-driver/src/controllers/: item.rs
api-usecase/: Cargo.toml
api-usecase/src/usecase/: item.rs
app-client/: Cargo.toml
app-client/src/: main.rs
docker/mysql/initdb/: init.sql
openapi/: openapi.yml
